--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="sketch.js" type="text/javascript"></script>
 
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
+    <link rel="icon" type="image/ico" href="http://menu.dining.ucla.edu/Content/Images/WebCodes/16px/v.png">
   </head>
   <body>
   </body>
